<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".Registration">


    <LinearLayout
        android:layout_width="330dp"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/signup"
            android:textSize="40dp"
            android:textColor="#E2281A"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Fullname"
            android:textSize="20dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="22dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/phone"
            android:textSize="23dp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="22dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Email"
            android:textSize="23dp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="22dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Password"
            android:textSize="23dp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="22dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:text="@string/gender"
                android:textSize="23dp"
                android:textColor="#000000" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/male"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/female"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/other"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:text="@string/BloodGroup"
                android:textSize="23dp"
                android:textColor="#000000" />

            <Spinner
                android:entries="@array/bloodgroup"
                android:id="@+id/bloodgrp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:text="@string/LastDonated"
                android:textSize="23dp"
                android:textColor="#000000" />

            <Spinner
                android:entries="@array/lastdonated"
                android:id="@+id/lastdonated"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:text="@string/state"
                android:textSize="23dp"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:text="@string/district"
                android:textSize="23dp"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/dist"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5">
            </Spinner>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="Area"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/submit"
                android:textSize="25dp"
                android:layout_margin="5dp"
                android:background="@drawable/buttondesign"
                android:textColor="#FFFFFF"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="22dp"
                android:layout_margin="5dp"
                android:background="@drawable/buttondesign"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>