<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="5"
    tools:showIn="@layout/app_bar_main">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1.5">

   </LinearLayout>

    <Button
        android:text="@string/button1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:textSize="25dp"
        android:textColor="#FFFFFF"
        android:padding="4dp"
        android:background="#E2281A"
        android:layout_weight="0.7"/>

    <Button
        android:text="@string/button2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:textSize="25dp"
        android:textColor="#FFFFFF"
        android:padding="4dp"
        android:background="#E2281A"
        android:layout_weight="0.7"/>

    <Button
        android:onClick="login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/login"/>

    <Button
        android:onClick="signup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/signup"/>

</LinearLayout>