<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="35dp"
        android:textColor="#E2281A"/>

    <TextView
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:text="@string/email_or_phone"
        android:textSize="21dp"
        android:textColor="#000000"/>

    <EditText
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:textSize="23dp"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:layout_gravity="center"
        android:text="@string/Password"
        android:textSize="21dp"
        android:textColor="#000000"/>

    <EditText
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:textSize="23dp"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:layout_weight="0.82"
        android:text="@string/login"
        android:layout_gravity="center"
        android:background="@drawable/buttondesign"
        android:textColor="#FFFFFF"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:text="@string/new_user"
        android:textSize="20dp"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_gravity="center"
        android:text="@string/signup_here"
        android:textSize="22dp"
        android:textColor="#E2281A"
        android:background="@drawable/button2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"></LinearLayout>

</LinearLayout>